Fix editor action overlap in mobile view

--- a/src/app/components/editor/editor.component.scss
+++ b/src/app/components/editor/editor.component.scss
@@ -90,6 +90,16 @@
   padding: 0 50px;
 }
 
+@media only screen and (max-width: 600px) {
+  .note-container  {
+    padding: 0 15px;
+  }
+
+  ::ng-deep .ant-layout-header {
+    padding: 0 15px;
+  }
+}
+
 .save-notes-indication {
   color: rgba(0, 0, 0, 0.45);
   font-style: italic;
